# abb_pkg

./: README.md
RAPID/egm/: ModuleEGM.mod  egm.pgf
RAPID/gripper/: ModuleGRIP.mod  gripper.pgf
workspace/: .gitignore  run_egm.sh  send_pose.sh
workspace/src/abb_grip/: CMakeLists.txt  package.xml
workspace/src/abb_grip/include/abb_grip/: udp_sender.hpp
workspace/src/abb_grip/src/: grip_node.cpp  udp_sender.cpp
workspace/src/abb_lerobot/: package.xml  send_pose.sh  setup.cfg  setup.py
workspace/src/abb_lerobot/abb_lerobot/: cmd_vel_to_target_pose.py  dataset_recorder.py  gamepad_teleop.py  lerobot_bridge.py  lerobot_node.py  send_pose.py  teleop_node.py
workspace/src/abb_lerobot/abb_lerobot/submodules/: lerobot_interface.py
workspace/src/abb_lerobot/config/: cmd_vel_to_target_pose.yaml  gamepad_teleop.yaml
workspace/src/abb_lerobot/launch/: cmd_vel_to_target_pose.launch.py  gamepad_control.launch.py  gamepad_teleop.launch.py  lerobot_node.launch.py  record_dataset.launch.py
workspace/src/abb_pkg/: CMakeLists.txt  package.xml  run_line_joints.bash
workspace/src/abb_pkg/action/: MoveToPose.action
workspace/src/abb_pkg/config/: abb.rviz  params.yaml
workspace/src/abb_pkg/include/abb_pkg/: controller.hpp  egm_node.hpp
workspace/src/abb_pkg/launch/: egm.launch.py  irb1600_10_145_egm_rviz.launch.py
workspace/src/abb_pkg/src/: controller.cpp  egm_node.cpp
workspace/src/camera_wrapper/: package.xml  setup.cfg  setup.py
workspace/src/camera_wrapper/camera_wrapper/: pylon_camera_node.py
workspace/src/camera_wrapper/config/: params.yaml
workspace/src/camera_wrapper/launch/: camera_node.launch.py
workspace/src/trac_ik/trac_ik_lib/: CMakeLists.txt
workspace/src/vel_control/: AGENTS.md  CMakeLists.txt  package.xml  run_circle.bash  run_circle_joints.bash  run_line.bash  test_ik.bash
workspace/src/vel_control/config/: params.yaml
workspace/src/vel_control/include/vel_control/: controller.hpp  vel_control_node.hpp
workspace/src/vel_control/launch/: egm_rviz.launch.py  vel_control.launch.py
workspace/src/vel_control/src/: controller.cpp  vel_control_node.cpp
workspace/src/vel_control/urdf/: irb1600.urdf  robot.urdf
