<?xml version="1.0"?>
<package format="3">
  <name>abb_pkg</name>
  <version>0.0.0</version>
  <description>ABB EGM control node with RViz visualization</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>TODO</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>abb_libegm</depend>
  <depend>trac_ik_lib</depend>
  <depend>kdl_parser</depend>

  <!-- For launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
