<?xml version="1.0"?>
<package format="3">
  <name>vel_control</name>
  <version>0.0.0</version>
  <description>ABB EGM velocity control node (cmd_vel to robot port)</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>abb_libegm</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
